# bayes_design

./: .gitignore  README.md  __init__.py  __main__.py  bayes_design.yaml  bayes_design_env.yml  design.py  experiment.py  experiments.md  pyproject.toml  setup.py
bayes_design/: model.py  utils.py
bayes_design/protein_mpnn/: dataset.py  protein_mpnn_run.py  training.py
bayes_design/src/bayes_design/experiments/: scrmsd_experiment.py
dependencies/: requirements.txt
src/bayes_design/: model.py
