[tool.poetry]
name = "bayes_design"
version = "0.1.0"
description = "A package for Bayesian design in molecular systems"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/bayes_design"
repository = "https://github.com/yourusername/bayes_design"

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "==2.1.1"
biopython = "==1.81"
sentencepiece = "==0.2.0"
transformers = "==4.44.2"
tokenizers = "==0.19.1"

[tool.poetry.package]
include = [{ path = "src/bayes_design", format = "sdist" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"